--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="card">
       <h1>Hello, I'm Grace 😶‍🌫️</h1>
-      <img class="avatar" type="image/png" src="../profile/images/photo.png" alt="Grace">
+      <img class="avatar" type="image/png" src="images/photo.png" alt="Grace">
       <p>I like eating, sleeping, and being lazy. Currently learning coding @ Le Wagon while building random-forest.io</p>
       <a class="green-button" href="https://www.random-forest.io/" target="_blank">Discover Random-Forest.io</a>
     </div>
