fixed social links

--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
     <div class="card">
       <h2>Follow Me</h2>
       <ul class="list-inline">
-        <li><a href="https://github.com/gbuna007"><i class="fa-brands fa-square-github"></i></a></li>
-        <li><a href="https://www.instagram.com/gracebunardi/"></a><i class="fa-brands fa-square-instagram"></i></a></li>
-        <li><a href="https://twitter.com/gbunabuna"></a><i class="fa-brands fa-square-twitter"></i></a></li>
+        <li>
+          <a href="https://github.com/gbuna007"><i class="fa-brands fa-square-github"></i></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/gracebunardi/"><i class="fa-brands fa-square-instagram"></i></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/gbunabuna"><i class="fa-brands fa-square-twitter"></i></a>
+        </li>
       </ul>
     </div>
   </div>
